# aiauv_simulator

./: .gitignore  .gitmodules  Cargo.toml  README.md  aiauv_config.yml  bluerov_reach_config.yml  eely500_config.yml  eely_config.yml
src/: bluerov_reach.rs  ik_controller.rs  lib.rs  main.rs  utils.rs
