[package]
name = "aiauv_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multibody_dynamics = "0.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
nalgebra = {version ="0.32", features = ["serde-serialize"]}
# ode_solvers = "0.3"
ode_solvers = {path = "ode-solvers"}
# csv = "1"
